--- a/playbooks/hosts/update_hosts_playbook.yml
+++ b/playbooks/hosts/update_hosts_playbook.yml
@@ -1,4 +1,4 @@
-- hosts: hosts 
+- hosts: ubuntu-servers 
   gather_facts: yes
   become: yes
   tasks:
@@ -20,6 +20,4 @@
         post_reboot_delay: 30
         test_command: uptime
       when: reboot_required_file.stat.exists
-
-
 
