--- a/playbooks/hosts/vm_onboard_playbook.yml
+++ b/playbooks/hosts/vm_onboard_playbook.yml
@@ -9,7 +9,7 @@
     - name: create admin user 
       ansible.builtin.user:
         name: admin 
-        password: "{{'<MyPassWord>' | password_hash('sha512') }}"
+        password: "{{'BludGod980!' | password_hash('sha512') }}"
         state: present
         groups: sudo
         create_home: yes
@@ -21,7 +21,7 @@
       authorized_key:
         user: admin 
         state: present
-        key: "{{ lookup('file', '<PathToPubKeyFile>') }}"
+        key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
       become: yes
 
     - name: update all packages to the latest version
