--- a/playbooks/hosts/vm_add_ssh_key.yml
+++ b/playbooks/hosts/vm_add_ssh_key.yml
@@ -2,7 +2,7 @@
   tasks:
     - name: add admin ssh key
       authorized_key:
-        user: admin 
+        user: admin
         state: present
         key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
-      becomed: yes
+      become: yes
