--- a/playbooks/hosts/play_update_hosts_playbook.yml
+++ b/playbooks/hosts/play_update_hosts_playbook.yml
@@ -1,18 +1,18 @@
-- hosts: ubuntu-servers 
+- hosts: hosts
   gather_facts: yes
   become: yes
   tasks:
     - name: update apt-get repo and cache
       ansible.builtin.apt:
-            update_cache: true
-            cache_valid_time: 3600
-            name: "*"
-            state: latest
+        update_cache: true
+        cache_valid_time: 3600
+        name: "*"
+        state: latest
     - name: Check if a reboot is needed for debian boxes
       register: reboot_required_file
       stat: path=/var/run/reboot-required get_md5=no
     - name: Reboot the box if kernel update
-      reboot: 
+      reboot:
         msg: "Reboot started by Ansible"
         connect_timeout: 5
         reboot_timeout: 300
@@ -20,4 +20,3 @@
         post_reboot_delay: 30
         test_command: uptime
       when: reboot_required_file.stat.exists
-
